--- a/src/main/webapp/app/entities/pedido-my-suffix/pedido-my-suffix.component.html
+++ b/src/main/webapp/app/entities/pedido-my-suffix/pedido-my-suffix.component.html
@@ -20,7 +20,7 @@
             <tr>
             <th scope="col" ><span jhiTranslate="global.field.id">ID</span></th>
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.idPedido">Id Pedido</span></th>
-            <th scope="col" ><span jhiTranslate="multishopApp.pedido.idCliente">Id Cliente</span></th>
+            <th scope="col" ><span jhiTranslate="multishopApp.pedido.idClient">Id Client</span></th>
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.idTienda">Id Tienda</span></th>
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.fechaPedido">Fecha Pedido</span></th>
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.fechaNotificacion">Fecha Notificacion</span></th>
@@ -33,7 +33,7 @@
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.fechaConfirmacion">Fecha Confirmacion</span></th>
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.modoPago">Modo Pago</span></th>
             <th scope="col" ><span jhiTranslate="multishopApp.pedido.estadoPedido">Estado Pedido</span></th>
-            <th scope="col" ><span jhiTranslate="multishopApp.pedido.idCliente">Id Cliente</span></th>
+            <th scope="col" ><span jhiTranslate="multishopApp.pedido.client">Client</span></th>
             <th scope="col"></th>
             </tr>
             </thead>
@@ -41,7 +41,7 @@
             <tr *ngFor="let pedido of pedidos ;trackBy: trackId">
                 <td><a [routerLink]="['/pedido-my-suffix', pedido.id, 'view' ]">{{pedido.id}}</a></td>
                 <td>{{pedido.idPedido}}</td>
-                <td>{{pedido.idCliente}}</td>
+                <td>{{pedido.idClient}}</td>
                 <td>{{pedido.idTienda}}</td>
                 <td>{{pedido.fechaPedido | date:'mediumDate'}}</td>
                 <td>{{pedido.fechaNotificacion | date:'mediumDate'}}</td>
@@ -63,8 +63,8 @@
                     </div>
                 </td>
                 <td>
-                    <div *ngIf="pedido.idClienteId">
-                        <a [routerLink]="['/client-my-suffix', pedido.idClienteId , 'view' ]" >{{pedido.idClienteId}}</a>
+                    <div *ngIf="pedido.clientId">
+                        <a [routerLink]="['/client-my-suffix', pedido.clientId , 'view' ]" >{{pedido.clientId}}</a>
                     </div>
                 </td>
                 <td class="text-right">
