MULTISHOP Cambios entidades

--- a/src/main/webapp/app/entities/client-my-suffix/client-my-suffix-detail.component.html
+++ b/src/main/webapp/app/entities/client-my-suffix/client-my-suffix-detail.component.html
@@ -5,11 +5,7 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="multishopApp.client.idClient" [ngbTooltip]="'multishopApp.client.help.idClient' | translate">Id Client</span></dt>
-                <dd>
-                    <span>{{client.idClient}}</span>
-                </dd>
-                <dt><span jhiTranslate="multishopApp.client.firstName">First Name</span></dt>
+                <dt><span jhiTranslate="multishopApp.client.firstName" [ngbTooltip]="'multishopApp.client.help.firstName' | translate">First Name</span></dt>
                 <dd>
                     <span>{{client.firstName}}</span>
                 </dd>
