--- a/src/main/webapp/app/entities/client-my-suffix/client-my-suffix-update.component.html
+++ b/src/main/webapp/app/entities/client-my-suffix/client-my-suffix-update.component.html
@@ -10,12 +10,7 @@
                         readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="multishopApp.client.idClient" for="field_idClient" [ngbTooltip]="'multishopApp.client.help.idClient' | translate">Id Client</label>
-                    <input type="number" class="form-control" name="idClient" id="field_idClient"
-                           formControlName="idClient"/>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="multishopApp.client.firstName" for="field_firstName">First Name</label>
+                    <label class="form-control-label" jhiTranslate="multishopApp.client.firstName" for="field_firstName" [ngbTooltip]="'multishopApp.client.help.firstName' | translate">First Name</label>
                     <input type="text" class="form-control" name="firstName" id="field_firstName"
                            formControlName="firstName"/>
                 </div>
@@ -42,8 +37,12 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="multishopApp.client.endDate" for="field_endDate">End Date</label>
-                    <input type="number" class="form-control" name="endDate" id="field_endDate"
-                           formControlName="endDate"/>
+                    <div class="input-group">
+                        <input id="field_endDate" type="text" class="form-control" name="endDate" ngbDatepicker  #endDateDp="ngbDatepicker" formControlName="endDate"/>
+                        <span class="input-group-append">
+                            <button type="button" class="btn btn-secondary" (click)="endDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
+                        </span>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="multishopApp.client.documentId" for="field_documentId">Document Id</label>
